--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -17,9 +17,8 @@ To install the tools you have to follow the following steps:
 
 - Main tool installation:
   From the QuasiRegularRigidMotion directory:
-    mkdir build
-    cd build
-    cmake ..
+    mkdir build ; cd build
+    cmake .. -DDGtal_DIR=../DGtal/build
     make -j 5
     
   
